# cli11

./: CMakeLists.txt  README.md  readme.md
examples/: CMakeLists.txt  arg_capture.cpp  array_option.cpp  callback_passthrough.cpp  close_match.cpp  config_app.cpp  custom_parse.cpp  custom_validator.cpp  date_validator.cpp  digit_args.cpp  enum.cpp  enum_ostream.cpp  formatter.cpp  groups.cpp  help_usage.cpp  inter_argument_order.cpp  modhelp.cpp  nested.cpp  option_groups.cpp  positional_arity.cpp  positional_validation.cpp  prefix_command.cpp  ranges.cpp  retired.cpp  shapes.cpp  simple.cpp  subcom_help.cpp  subcom_partitioned.cpp  subcommands.cpp  testEXE.cpp  validators.cpp
examples/subcom_in_files/: CMakeLists.txt  subcommand_a.cpp  subcommand_main.cpp
src/: CMakeLists.txt  app.cpp  argv.cpp  cli11.cpp  config.cpp  config_fwd.cpp  encoding.cpp  error.cpp  extra_validators.cpp  formatter.cpp  formatter_fwd.cpp  option.cpp  split.cpp  string_tools.cpp  timer.cpp  type_tools.cpp  validators.cpp  version.cpp
tests/: AppTest.cpp  CMakeLists.txt  ComplexTypeTest.cpp  ConfigFileTest.cpp  CreationTest.cpp  DeprecatedTest.cpp  EncodingTest.cpp  ExtraValidatorsTest.cpp  FormatterTest.cpp  HelpTest.cpp  HelpersTest.cpp  NewParseTest.cpp  NumericTypeTest.cpp  OptionGroupTest.cpp  OptionTypeTest.cpp  OptionalTest.cpp  SetTest.cpp  SimpleTest.cpp  StringParseTest.cpp  SubcommandTest.cpp  TimerTest.cpp  TransformTest.cpp  TrueFalseTest.cpp  catch.hpp  catch_helper.hpp  localeTest.cpp  test_helper.cpp
tests/applications/: ensure_utf8.cpp  ensure_utf8_twice.cpp
tests/platform/windows/: WindowsTest.cpp
